[package]
name = "wil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
edy = { git = "https://github.com/snowstorm-alfredosalata/edy", version = "0.1.0", features = ["serde"] }
once_cell = "1.19.0"
thiserror = "1.0.57"
wasm-bindgen = "0.2.92"
web-sys = {version = "0.3.69", features=[
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCollection',
  'Node',
  'Window',
]}
